--- a/03-JavaScript/02-Slider/index.html
+++ b/03-JavaScript/02-Slider/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Slider</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -17,8 +17,8 @@
 
 
 	<img src="images/foto1.jpg" alt="Foto 1">
-	<img src="images/foto2.jpg" alt="Foto 2">
-	<img src="images/foto3.jpg" alt="Foto 3">
+	<img src="./images/foto2.jpg" alt="Foto 2">
+	<img src="./images/foto3.jpg" alt="Foto 3">
 
 
 </body>
